mobile visibility fixes

--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body {
     background: url('images/index_optimized.webp') 50% 50% no-repeat fixed black;
-    min-width: 700px;
 }
 
 a {
@@ -34,18 +33,32 @@ a {
     display: inline-block;
 }
 
-@media (max-width: 1080px) {
-    .bar-link.excessive {
-        visibility: collapse;
-        display: none;
-    }
+#logo {
+    float: left;
+    width: 0;
+    max-width: 100vw;
+    clear: both;
+    margin: 0 0 20px 25px;
+    opacity: 0.35;
 }
 
 .bar-link:hover {
     background-position: center -142px !important;
 }
 
-.buttonkeygameicon, .buttonkeyrazer, .buttonkeylogitech {
+#includedContent {
+    min-height: 190px;
+}
+
+#topbar {
+    overflow: visible;
+    background-position: -50px -13px;
+    background-image: url('images/Aurora_top_bar_new.webp');
+    background-repeat: repeat-x;
+    padding-top: 57px;
+}
+
+.buttonkeygameicon, #buttonkeyrazer, #buttonkeylogitech {
     border: 3px solid #323232;
     border-radius: 10px;
     padding: 10px;
@@ -170,7 +183,36 @@ a {
 }
 
 .keyboard {
+    position: relative;
     transition: opacity 1s ease;
+}
+
+.keyboard > * {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+}
+
+.demo-container {
+    align-items: center;
+}
+
+.demo-container > * {
+    min-width: 50px;
+    max-width: 100%;
+    margin: 5px;
+}
+
+.keyboard-container {
+    display:inline-block;
+    width: 600px;
+    max-width: 100vw;
+    height:342px;
+}
+
+#gameplay {
+    max-width: 100%;
 }
 
 .keyboard-switch {
@@ -212,4 +254,33 @@ lite-youtube {
 .preload * {
     transition: none !important;
     animation-duration: 0.001s !important;
+}
+
+@media (max-width: 1080px) {
+    .bar-link {
+        top: 0;
+    }
+    .bar-link.excessive {
+        visibility: collapse;
+        display: none;
+    }
+
+    #logo {
+        width: 100%;
+        margin: 0;
+    }
+
+    #logo > img {
+        max-width: 100%;
+    }
+
+    #topbar {
+        padding-top: 2px;
+    }
+}
+
+@media (max-width: 600px) {
+    .keyboard-container {
+        width: 100%;
+    }
 }
